argoCD/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ramura-site
spec:
  selector:
    matchLabels:
      app: arane
  template:
    metadata:
      labels:
        app: arane
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          image: registry.uniproject.jp/hp-infra/arane-site:5.0.0-2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: zip-pvc
              mountPath: /nextjs/public/assets
      volumes:
        - name: zip-pvc
          persistentVolumeClaim:
            claimName: zip
      imagePullSecrets:
        - name: harbor-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ramura-site
spec:
  ipFamilyPolicy: RequireDualStack
  selector:
    app: arane
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
