argoCD/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arane-site-ingress
  annotations:
    cert-manager.io/cluster-issuer: le-cf-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: arane.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ramura-site
                port:
                  number: 80
  tls:
    - hosts:
        - arane.uniproject.jp
      secretName: arane-site-tls
